--- a/ETL_Mini_Project_EAnderson_KBumadianne.ipynb
+++ b/ETL_Mini_Project_EAnderson_KBumadianne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,15 +1825,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Issue with this code if ran twice - seeing the orig values as already transformed and no longer UNIX"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2158,7 +2151,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,22 +2159,41 @@
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
-    "#Filter to the launched_date column and end_date column separately and convert the UNIX timestamp to a year/month/date/time format by indicating the unit is in seconds\n",
-    "# Once the UNIX timestamp is converted, filter the datetime down to just the Y/M/D format\n",
-    "campaign_df= campaign_df.assign(\n",
-    "    launched_date = pd.to_datetime(campaign_df['launched_date'],unit='s').dt.strftime('%Y-%m-%d'),\n",
-    "    end_date = pd.to_datetime(campaign_df['end_date'],unit='s').dt.strftime('%Y-%m-%d')\n",
-    ")\n",
     "\n",
-    "# campaign_df = campaign_df.reset_index(drop=True)\n",
+    "#To avoid errors when running code multiple times, we need to ensure that the launch_date and end_date are only being converted to datetime format if they are not currently in datetime format\n",
+    "# First check that the current date is not in datetime format, if it is not then proceed to convert into a datetime format\n",
+    "if not pd.api.types.is_datetime64_any_dtype(campaign_df['launched_date']):\n",
+    "   \n",
+    "    # If the 'launched_date' column contains numeric UNIX timestamps (integers or floats), convert them\n",
+    "    if campaign_df['launched_date'].dtype in ['int64', 'float64']:\n",
+    "        \n",
+    "        #Filter to the launched_date column,convert the UNIX timestamp to a year/month/date/time format by indicating the unit is in seconds\n",
+    "        campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'],unit='s').dt.strftime('%Y-%m-%d') # Once the UNIX timestamp is converted, filter the datetime down to just the Y/M/D format\n",
     "\n",
+    "    #If the format is already a string, then leave as is so we avoid errors on trying to convert a datetime format into a datetime format\n",
+    "    else:\n",
+    "        campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'], errors='coerce').dt.strftime('%Y-%m-%d')\n",
+    "        \n",
+    "# Repeat the process filtered to the end_date\n",
+    "if not pd.api.types.is_datetime64_any_dtype(campaign_df['end_date']):\n",
+    "\n",
+    "    # If the 'end_date' column contains numeric UNIX timestamps (integers or floats), convert them\n",
+    "    if campaign_df['end_date'].dtype in ['int64', 'float64']:\n",
+    "    \n",
+    "        #Filter to the launched_date column,convert the UNIX timestamp to a year/month/date/time format by indicating the unit is in seconds\n",
+    "        campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'],unit='s').dt.strftime('%Y-%m-%d') # Once the UNIX timestamp is converted, filter the datetime down to just the Y/M/D format\n",
+    "\n",
+    "    #If the format is already a string, then leave as is so we avoid errors on trying to convert a datetime format into a datetime format\n",
+    "    else:\n",
+    "        campaign_df['end_date'] = pd.to_datetime(campaign_df['launched_date'], errors='coerce').dt.strftime('%Y-%m-%d')\n",
+    "    \n",
     "#Show the dateframe with the datetime changes\n",
     "campaign_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2525,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2830,7 @@
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2848,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2909,7 +2921,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2945,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3006,7 +3018,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3018,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3047,7 +3059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3121,7 +3133,7 @@
        "4       2199  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3144,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3170,7 +3182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3295,7 +3307,7 @@
        "4        2199     Samuel Sorgatz     Samuel   Sorgatz  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3327,7 +3339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3432,7 +3444,7 @@
        "4      samuel.sorgatz@gmail.com  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3452,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3525,7 +3537,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3538,7 +3550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3617,7 +3629,7 @@
        "4        2199     Samuel   Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3631,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3659,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3671,28 +3683,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9 entries, 0 to 8\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   category_id  9 non-null      object\n",
-      " 1   category     9 non-null      object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 276.0+ bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3852,7 +3848,7 @@
        "4        cat4        subcat4  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3864,7 +3860,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3878,7 +3874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
